Quick overflow styling fix

--- a/frontend/src/app/page.css
+++ b/frontend/src/app/page.css
@@ -25,6 +25,7 @@
   flex: 3;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .top-left {
@@ -39,12 +40,15 @@
   flex: 1;
   padding: 0rem;
   min-height: 0;
+  overflow: hidden;
 }
 
 .cost {
   flex: 4;
+  overflow: hidden;
 }
 
 .selection {
   flex: 3;
+  overflow: hidden;
 }
